@@ -1,6 +1,6 @@
 plugins {
-    id 'org.springframework.boot' version '2.4.5' apply false
-    id 'org.springframework.cloud.contract' version '3.0.2' apply false
+    id 'org.springframework.boot' version '2.7.2' apply false
+    id 'org.springframework.cloud.contract' version '3.1.3' apply false
 }
 
 subprojects {
@@ -10,14 +10,14 @@ subprojects {
 
     group 'com.example'
     version '0.0.1-SNAPSHOT'
-    sourceCompatibility = JavaVersion.VERSION_11
+    sourceCompatibility = JavaVersion.VERSION_17
 
     repositories {
         mavenCentral()
     }
 
     ext {
-        set('springCloudVersion', '2020.0.2')
+        set('springCloudVersion', '2021.0.3')
     }
 
     dependencyManagement {
@@ -34,6 +34,5 @@ subprojects {
 
     test {
         useJUnitPlatform()
-        jvmArgs('--illegal-access=deny')
     }
 }
